RESOLVED FIXED314825
SVG overflows edge when offset by fraction
https://bugs.webkit.org/show_bug.cgi?id=314825
Summary SVG overflows edge when offset by fraction
Henrik Hørlück Berg
Reported 2026-05-14 09:34:57 PDT
Created attachment 479666 [details] Render w/ issue in tech preview 243 Regression from Safari 26.5 to tech preview 243 (did not test earlier tech previews), also tested with commit 8c3ffc7374b1bd47970fc0e22f03579b7e6a7009 locally (macOS 26.5). ```html <!DOCTYPE html> <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" style="margin: 39.5px auto;"> <circle cx="50" cy="50" r="50" fill="black"/> </svg> ``` Expected: the whole circle should be visible Result: slight overflow/clip on the top, which does not match the size of the svg. With `svg { overflow: visible }` there is no clip
Attachments
Render w/ issue in tech preview 243 (48.71 KB, image/png)
2026-05-14 09:34 PDT, Henrik Hørlück Berg
no flags
Henrik Hørlück Berg
Comment 1 2026-05-14 09:51:31 PDT
Radar WebKit Bug Importer
Comment 2 2026-05-21 09:35:12 PDT
EWS
Comment 3 2026-05-26 07:39:29 PDT
Committed 313886@main (f77c54c24879): <https://commits.webkit.org/313886@main> Reviewed commits have been landed. Closing PR #64936 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.